amsterdam and shot in the dark

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
           <li id="release-on_the_floor" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/3guu1NVq5cglm8yzIbUqAp?si=16595e6c19f44584" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/cp_shot-in-the-dark.jpg" alt="Shot In The Dark by Castor & Pollux, Over Easy, Linney">
+            </a>
+          </li>
+          <li id="release-on_the_floor" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5cexuf9cOVmteecGvt2ljY?si=5246834234d94ee9" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/cp__walk-away.jpeg" alt="Walk Away by Castor & Pollux & Ozgun">
             </a>
@@ -298,6 +303,15 @@
               <p class="w-10">RSVP</p>
             </div>
             <ul class="tc tl-l">
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">21</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Turn It Up Muzik Mix Marathon ADE 2023</p>
+                <p class="pv3 f3-l w-20-l">Amsterdam, NL</p>
+                <a href="https://www.eventbrite.com/e/turnitup-muzik-ade-2023-mix-marathon-tickets-695247753747?aff=oddtdtcreator" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">13</span></h2>
