--- a/index.html
+++ b/index.html
@@ -305,6 +305,24 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Nebula</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://dice.fm/partner/mixx-lifestyle-inc-dba-nebula/event/e3l86-will-sparks-25th-nov-nebula-new-york-tickets?dice_id=976970&dice_channel=web&dice_tags=organic&dice_campaign=Mixx+Lifestyle+Inc.+dba+Nebula+&dice_feature=marketing&_branch_match_id=1053377617398244452&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1Q8ztzRJMjNJNTcxMgIAuaQHgiEAAAA%3D" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Avant Gardner</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://dice.fm/partner/avant-gardner-llc/event/ndo39-deorro-24th-nov-great-hall-at-avant-gardner-new-york-tickets?dice_id=1594794&dice_channel=web&dice_tags=organic&dice_campaign=Avant+Gardner+LLC&dice_feature=marketing&_branch_match_id=1053377617398244452&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1a9ITDNITTMwTU60NAYAcceGxiEAAAA%3D" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">21</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
