--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Home the NY DJs Castor & Pollux" />
+	<meta name="description" content="Home of NY DJs Castor & Pollux" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
